@@ -5,7 +5,7 @@
 	<property name="projecthome" value="." />
 
 	<!-- verze bundle -->
-	<property name="version" value="1.0.2-SNAPSHOT" />
+	<property name="version" value="1.0.2-RC1" />
 
 	<!-- symbolický název bundelu -->
 	<property name="jarname" value="${ant.project.name}" />
