@@ -1,16 +1,26 @@
 *********************************************************************************************
 *                                  CHANGE LOG 1.0.1 - > 1.0.2                               *
 *********************************************************************************************
+  * (4/7/2011) vsouhrada
+     #156
+     
+        CHANGED : JUIGLE library marked as Release Candidate 1 (RC1)
+        CHANGED : Switched PluginEngine library from 1.0 to 1.0.1
+        ADDED   : Method on interface IPerspectiveLoader
+        ADDED   : Added a support for switching perspectives from one perspective to the another.
   * (3/21/2011) vsouhrada
      #150
+     
         ADDED   : Now is in target called makejar (build.xml) create jar file with sources
          
   * (3/20/2011) vsouhrada
      #148
+     
         FIXED   : Fixed a bug in LanguageObservable when method updateText is calling - method setLocalizedResourceBundle is now called before the method updateText.
   
   * (10/30/2010) vsouhrada
   	 #145
+  	 
   	 	ADDED   : Class Database which represents database connected object. Allow to you get a database connection a connect to database.
   	 	ADDED   : Added a DatabaseDialog class for connect to database. It is not complete yet.
 
